--- a/css/Pacman.css
+++ b/css/Pacman.css
@@ -37,3 +37,8 @@ button {
   display: inline-block;
   font-size: 18px;
 }
+
+#leaderboard {
+  text-align: center;
+  list-style-position: inside;
+}
